apps/media/sonarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: series
              mountPath: /tv
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: downloads
          nfs:
            server: 192.168.178.59
            path: /mnt/Storage_new/downloads
        - name: series
          nfs:
            server: 192.168.178.59
            path: /mnt/Storage_new/jellyfin
