apps/media/sonarr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarr.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: sonarr-tls
